Set overflow to hidden to avoid overlapping

--- a/static/css/arapheno.css
+++ b/static/css/arapheno.css
@@ -106,3 +106,7 @@ i.material-icons.error {
     flex:1;
     flex-direction: column;
 }
+
+.ontology-source-container .jstree {
+    overflow:hidden;
+}
